Basic s2i test Java image for fabric8.